<resources>
    <string name="app_name">ForumFGDApps</string>
    <string name="title_app">Daftar Hadir FGD</string>
    <string name="title_app_result">Anda Telah Berhasil Terdaftar</string>
    <string name="nama_hint">Masukkan Nama Lengkap Anda</string>
    <string name="nama">Nama Anda</string>
    <string name="telefon">No HP Aktif</string>
    <string name="telefon_hint">Masukkan No HP Aktif Anda</string>
    <string name="email">Email Anda</string>
    <string name="email_hint">Masukkan Email Anda</string>
    
    <string name="created_by">Created By: </string>
    <string name="nim_developer">NIM : 10122328</string>
    <string name="nama_developer">Luqsiyana Bariq Raihan</string>
    <string name="title_email">Email Saya :</string>
    <string name="email_developer">luqsiyana.10122328@mahasiswa.unikom.ac.id</string>
    <string name="title_instagram">Instagram Saya :</string>
    <string name="ig_developer">https://www.instagram.com/lqsyn.br</string>

    <string name="rad_gender">Jenis Kelamin</string>
    <string name="rad_laki">Laki-Laki</string>
    <string name="rad_perempuan">Perempuan</string>

    <string name="chk_skillset">Skillset Anda</string>
    <string name="chk_algo">Algoritma</string>
    <string name="chk_problem_solving">Problem Solving</string>
    <string name="chk_programming">Programming</string>
    <string name="chk_designthinking">Design Thinking</string>">
    <string name="chk_criticalthinking">Critical Thinking</string>">

    <string name="kategori">Kategori Peserta</string>
    <string name="info">Info Pengembang</string>
    <string name="submit">Simpan</string>
</resources>