<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/title_app"
            android:textSize="25sp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/nama" />

        <EditText
            android:id="@+id/edt_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:inputType="text"
            android:hint="@string/nama_hint" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/telefon" />

        <EditText
            android:id="@+id/edt_telefon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:inputType="phone"
            android:hint="@string/telefon_hint" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/email" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/rad_gender" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rad_lakilaki"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/rad_laki" />

            <RadioButton
                android:id="@+id/rad_perempuan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/rad_perempuan" />

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/chk_skillset" />

        <CheckBox
            android:id="@+id/chk_algo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chk_algo"
            android:checked="true" />

        <CheckBox
            android:id="@+id/chk_problem_solving"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chk_problem_solving"
            android:checked="false" />

        <CheckBox
            android:id="@+id/chk_criticalthinking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chk_criticalthinking"
            android:checked="false" />

        <CheckBox
            android:id="@+id/chk_programming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chk_programming"
            android:checked="false" />

        <CheckBox
            android:id="@+id/chk_designthinking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chk_designthinking"
            android:layout_marginBottom="10dp"
            android:checked="false" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/kategori" />

        <Spinner
            android:id="@+id/spCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:spinnerMode="dialog"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_marginBottom="20dp" />

    </LinearLayout>

</ScrollView>